<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/color_primary"

    >
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GeneralMapsView" />

    <ImageView
        android:id="@+id/new_maps_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_name"
        android:layout_margin="20dp"

        android:padding="10dp"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:tint="@color/color_miscellaneous_background"

        android:background="@drawable/maps_button_accent"

        android:elevation="10dp"
        />

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_quick_actions"
        android:elevation="5dp"
        android:layout_margin="15dp"

        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/center_map"

            android:elevation="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_map"
            android:background="@drawable/background_logout_and_password"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            android:paddingBottom="2dp"

            android:fontFamily="@font/ubuntu_medium"
            android:layout_gravity="center"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:layout_marginLeft="20dp"

            android:textColor="@color/color_default_note"
            />

        <TextView
            android:id="@+id/focus_pin"

            android:elevation="5dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/focus_on_pin"
            android:background="@drawable/background_logout_and_password"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            android:paddingBottom="2dp"

            android:fontFamily="@font/ubuntu_medium"
            android:layout_gravity="center"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"

            android:layout_marginLeft="20dp"

            android:textColor="@color/color_default_note"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:elevation="5dp"

            android:id="@+id/previous_pin"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"

            android:layout_gravity="center"

            android:layout_marginLeft="10dp"
            app:tint="@color/color_miscellaneous_background"

            android:background="@drawable/maps_button_accent"
            android:padding="3dp"

            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/next_pin"

            android:elevation="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_next"

            android:layout_gravity="center"

            android:layout_marginLeft="10dp"
            app:tint="@color/color_miscellaneous_background"

            android:background="@drawable/maps_button_accent"
            android:padding="3dp"

            android:layout_marginRight="20dp"

            android:visibility="gone"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>