<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@color/color_primary"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yellow_background"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <View
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/profile_top_part"
            />

        <ImageView
            android:id="@+id/profile_back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"

            android:padding="10dp"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:tint="@color/color_primary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/profile_user_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Your Name"

                android:fontFamily="@font/ubuntu_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/profile_user_email"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="youremail@gmail.com"
                android:fontFamily="@font/ubuntu_regular"
                android:layout_gravity="center"
                />



        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/profile_buttons"

        app:layout_constraintTop_toBottomOf="@id/yellow_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/profile_change_password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_password"
            android:background="@drawable/background_logout_and_password"
            android:gravity="center"

            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:fontFamily="@font/ubuntu_medium"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        <TextView
            app:layout_constraintBottom_toBottomOf="parent"

            android:id="@+id/profile_logout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="@drawable/background_logout_and_password"
            android:gravity="center"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:fontFamily="@font/ubuntu_bold"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_buttons"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/profile_stats_total_reports"


            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reports totali: 10"

            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/color_text_subtitle"

            android:background="@drawable/background_stats"

            android:layout_marginBottom="20dp"

            android:visibility="gone"

            />

        <TextView
            android:id="@+id/profile_most_frequent_report"

            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Report più frequente"

            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/color_miscellaneous_background"

            android:background="@drawable/background_stats1"

            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"

            />

        <LinearLayout
            android:id="@+id/profile_launch_minigame"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_logout_and_password"
            android:layout_margin="30dp"
            android:padding="10dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_game"
                android:layout_marginLeft="10dp"
                />



            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minigame"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/profile_is_admin"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_admin"
        android:background="@drawable/background_logout_and_password"
        android:gravity="center"

        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:fontFamily="@font/ubuntu_medium"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"

        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>